# adventofcode

./: .gitignore  pyproject.toml
day_1/: day_1_part_1.py  day_1_part_2.py  test_day_1_part_1.py  test_day__1_part_2.py
day_2/: day_2.py  test_day_2.py
day_3/: day_3.py  test_day_3.py
