[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["monkeysprocket <mjquinn88@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
